--- a/IoraWallPaper/Resource/Base.lproj/Main.storyboard
+++ b/IoraWallPaper/Resource/Base.lproj/Main.storyboard
@@ -146,17 +146,17 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="eBg-qs-HDP">
-                                <rect key="frame" x="225" y="12" width="140" height="40"/>
+                                <rect key="frame" x="175" y="12" width="190" height="40"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mew-W7-nvh">
-                                        <rect key="frame" x="0.0" y="0.0" width="27.5" height="40"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                                         <state key="normal" title="달력"/>
                                         <connections>
                                             <segue destination="TuU-La-Pew" kind="presentation" id="5jV-7r-S1u"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h6O-vY-bk0">
-                                        <rect key="frame" x="37.5" y="0.0" width="27.5" height="40"/>
+                                        <rect key="frame" x="50" y="0.0" width="40" height="40"/>
                                         <color key="tintColor" systemColor="systemGray5Color" red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" image="preview">
                                             <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -166,14 +166,14 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qdW-qK-58k">
-                                        <rect key="frame" x="75" y="0.0" width="27.5" height="40"/>
+                                        <rect key="frame" x="100" y="0.0" width="40" height="40"/>
                                         <color key="tintColor" systemColor="systemGray5Color" red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" image="download">
                                             <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U8r-uv-tqC">
-                                        <rect key="frame" x="112.5" y="0.0" width="27.5" height="40"/>
+                                        <rect key="frame" x="150" y="0.0" width="40" height="40"/>
                                         <color key="tintColor" systemColor="systemGray5Color" red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" image="share">
                                             <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -181,7 +181,7 @@
                                     </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="140" id="JNE-E6-Dqh"/>
+                                    <constraint firstAttribute="width" constant="190" id="JNE-E6-Dqh"/>
                                     <constraint firstAttribute="height" constant="40" id="dWf-UI-JPb"/>
                                 </constraints>
                             </stackView>
@@ -228,10 +228,10 @@
             </objects>
             <point key="canvasLocation" x="1831.8840579710147" y="118.52678571428571"/>
         </scene>
-        <!--Calendar View Controller-->
+        <!--CalendarViewController-->
         <scene sceneID="u16-GI-6Lu">
             <objects>
-                <viewController modalPresentationStyle="fullScreen" id="TuU-La-Pew" customClass="CalendarViewController" customModule="iORA" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CalendarViewController" title="CalendarViewController" modalPresentationStyle="fullScreen" id="TuU-La-Pew" customClass="CalendarViewController" customModule="iORA" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9UP-MW-GRS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -250,6 +250,7 @@
                                 </state>
                                 <connections>
                                     <action selector="closeAction:" destination="hjq-DW-yC7" eventType="touchUpInside" id="juh-be-n6p"/>
+                                    <action selector="closeAction:" destination="TuU-La-Pew" eventType="touchUpInside" id="yH3-7q-jPd"/>
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="D3d-wE-PEB">
@@ -323,6 +324,16 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wY9-sW-zWt">
                                 <rect key="frame" x="323.5" y="17" width="28.5" height="28"/>
                                 <state key="normal" image="pDownload"/>
+                                <connections>
+                                    <action selector="downloadAction:" destination="TuU-La-Pew" eventType="touchUpInside" id="UGC-pp-8hZ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mps-fM-bL2">
+                                <rect key="frame" x="267.5" y="16" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="showAlertCalendarList:" destination="TuU-La-Pew" eventType="touchUpInside" id="f3X-kD-rsu"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -336,11 +347,17 @@
                             <constraint firstItem="zgo-F4-MUS" firstAttribute="top" secondItem="ToQ-qg-Ua3" secondAttribute="top" constant="12" id="PnQ-3N-TqX"/>
                             <constraint firstItem="wY9-sW-zWt" firstAttribute="centerY" secondItem="zgo-F4-MUS" secondAttribute="centerY" constant="-1.2" id="VRb-M2-6jd"/>
                             <constraint firstItem="7mE-Ob-DY4" firstAttribute="top" secondItem="9UP-MW-GRS" secondAttribute="top" id="ioq-5M-UX8"/>
+                            <constraint firstItem="wY9-sW-zWt" firstAttribute="leading" secondItem="mps-fM-bL2" secondAttribute="trailing" constant="10" id="jpv-NJ-40s"/>
+                            <constraint firstItem="mps-fM-bL2" firstAttribute="centerY" secondItem="wY9-sW-zWt" secondAttribute="centerY" id="pLZ-aC-WUW"/>
                             <constraint firstItem="D3d-wE-PEB" firstAttribute="centerY" secondItem="ToQ-qg-Ua3" secondAttribute="centerY" id="sbp-md-rE4"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ToQ-qg-Ua3"/>
                     </view>
                     <connections>
+                        <outlet property="closeButton" destination="zgo-F4-MUS" id="xrF-es-zpw"/>
+                        <outlet property="collectionView" destination="SER-Eh-flq" id="mvW-nf-Qiz"/>
+                        <outlet property="downloadButton" destination="wY9-sW-zWt" id="4dS-3t-r95"/>
+                        <outlet property="imageView" destination="7mE-Ob-DY4" id="1G0-ng-slt"/>
                         <outlet property="monthLabel" destination="Mzg-sh-cr1" id="thb-C4-aGP"/>
                         <outlet property="yearLabel" destination="kSA-Sf-97P" id="iId-Yd-XBM"/>
                     </connections>
@@ -388,6 +405,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r0d-sb-ivc">
                                 <rect key="frame" x="323.5" y="17" width="28.5" height="28"/>
                                 <state key="normal" image="pDownload"/>
+                                <connections>
+                                    <action selector="downloadAction:" destination="hjq-DW-yC7" eventType="touchUpInside" id="PJH-p5-9rx"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
