다크모드 설정 관련 이미지 업데이트

--- a/IoraWallPaper/Resource/Base.lproj/LaunchScreen.storyboard
+++ b/IoraWallPaper/Resource/Base.lproj/LaunchScreen.storyboard
@@ -39,6 +39,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="launch" width="55.666667938232422" height="55.666667938232422"/>
+        <image name="launch" width="386" height="386"/>
     </resources>
 </document>
