--- a/IoraWallPaper/Resource/Base.lproj/Main.storyboard
+++ b/IoraWallPaper/Resource/Base.lproj/Main.storyboard
@@ -74,7 +74,7 @@ Check your connection</string>
                                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="ia9-As-I8U">
+                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="ira-Al-iUP">
                                                     <rect key="frame" x="15" y="15" width="20" height="20"/>
                                                 </activityIndicatorView>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8m4-1T-ly9">
@@ -83,16 +83,16 @@ Check your connection</string>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="8m4-1T-ly9" firstAttribute="leading" secondItem="kbO-Gw-iDy" secondAttribute="leading" id="0Ku-Kh-Z3p"/>
-                                                <constraint firstItem="ia9-As-I8U" firstAttribute="centerX" secondItem="kbO-Gw-iDy" secondAttribute="centerX" id="PSj-eL-SXg"/>
                                                 <constraint firstItem="8m4-1T-ly9" firstAttribute="top" secondItem="kbO-Gw-iDy" secondAttribute="top" id="RWv-qC-yL8"/>
+                                                <constraint firstItem="ira-Al-iUP" firstAttribute="centerY" secondItem="kbO-Gw-iDy" secondAttribute="centerY" id="SqE-LY-b1Q"/>
                                                 <constraint firstAttribute="bottom" secondItem="8m4-1T-ly9" secondAttribute="bottom" id="UtL-S2-TlL"/>
-                                                <constraint firstItem="ia9-As-I8U" firstAttribute="centerY" secondItem="kbO-Gw-iDy" secondAttribute="centerY" id="sa7-JD-SPU"/>
+                                                <constraint firstItem="ira-Al-iUP" firstAttribute="centerX" secondItem="kbO-Gw-iDy" secondAttribute="centerX" id="hcP-EO-9yB"/>
                                                 <constraint firstAttribute="trailing" secondItem="8m4-1T-ly9" secondAttribute="trailing" id="v34-VS-PKa"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="50" height="50"/>
                                         <connections>
-                                            <outlet property="activityIndicator" destination="ia9-As-I8U" id="E6a-xw-N3R"/>
+                                            <outlet property="activityIndicator" destination="ira-Al-iUP" id="6Rx-IL-3mh"/>
                                             <outlet property="wallpaperImageView" destination="8m4-1T-ly9" id="J6g-6D-Uot"/>
                                             <segue destination="tu2-80-rfH" kind="show" id="gGO-xV-JoC"/>
                                         </connections>
@@ -101,6 +101,7 @@ Check your connection</string>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="0V7-8L-FFn"/>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="hHl-nE-p7t"/>
+                                    <outlet property="prefetchDataSource" destination="BYZ-38-t0r" id="5L4-Kh-aWQ"/>
                                 </connections>
                             </collectionView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fgb-yh-tAm">
