앱 기능추가: 배경 상세회면 내에 페이지 스크롤 추가 및 검색 기능 구현

--- a/IoraWallPaper/Resource/Base.lproj/LaunchScreen.storyboard
+++ b/IoraWallPaper/Resource/Base.lproj/LaunchScreen.storyboard
@@ -39,6 +39,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="launch" width="386" height="386"/>
+        <image name="launch" width="416.66665649414062" height="416.66665649414062"/>
     </resources>
 </document>
